--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -1,5 +1,6 @@
 @import "fonts";
 @import "colors";
+@import "responsiveWidth";
 
 .headerBar {
   padding-top: 10px;
@@ -14,4 +15,15 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+@media screen and (max-width: $extraSmall) {
+  .headerBar {
+    display: none;
+  }
+}
+@media screen and (max-width: $small) {
+  .headerBar {
+    display: none;
+  }
 }
