--- a/frontend/src/styles/advisor.scss
+++ b/frontend/src/styles/advisor.scss
@@ -1,5 +1,6 @@
 @import "fonts";
 @import "colors";
+@import "responsiveWidth";
 
 .advisor {
   display: flex;
@@ -91,5 +92,34 @@
         cursor: pointer;
       }
     }
+  }
+}
+
+@media screen and (max-width: $extraSmall) {
+  .advisor {
+    padding: 20px 20px;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .openAva {
+    margin-top: 20px;
+
+    input,
+    button {
+      font-size: 20px;
+    }
+  }
+
+  .bookingContainer {
+    overflow-y: auto;
+  }
+}
+
+@media screen and (max-width: $small) {
+  .bookingContainer {
+    overflow-y: auto;
   }
 }
