--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -3,27 +3,47 @@
 @import "responsiveWidth";
 
 .headerBar {
-  padding-top: 10px;
-  font: $header;
-  line-height: 58px;
-  text-align: center;
-  background: linear-gradient(
-    180deg,
-    #fdf8fe 59.9%,
-    rgba(228, 214, 231, 0) 100%
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
+  display: flex;
+  padding: 20px 20px;
+
+  h1 {
+    padding-top: 5px;
+    flex: 7;
+    display: flex;
+    justify-content: center;
+    font: $header;
+    text-align: center;
+    background: linear-gradient(
+      180deg,
+      #fdf8fe 59.9%,
+      rgba(228, 214, 231, 0) 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+  }
+  button {
+    flex: 1;
+    cursor: pointer;
+    font: $secondaryFont;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background-color: white;
+    &:hover {
+      color: $btn-text-clr;
+      background-color: $white;
+    }
+  }
 }
 
 @media screen and (max-width: $extraSmall) {
   .headerBar {
-    display: none;
+    height: 2vh;
   }
 }
 @media screen and (max-width: $small) {
   .headerBar {
-    display: none;
+    height: 10%;
   }
 }
