--- a/frontend/src/styles/advisor.scss
+++ b/frontend/src/styles/advisor.scss
@@ -73,13 +73,15 @@
       border-radius: 10px;
       padding: 5px 15px;
       width: 200px;
-      height: 100px;
+      // height: 100px;
+      max-height: 250px;
+      gap: 10px;
       background-color: $white;
 
-      .date {
+      .dateAndTime {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 0.5rem;
         flex: 3;
         h4 {
           font: $secondaryFont;
