--- a/frontend/src/styles/advisor.scss
+++ b/frontend/src/styles/advisor.scss
@@ -63,6 +63,23 @@
     align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
+
+    .noAva {
+      background-color: white;
+      border-radius: 5px;
+      display: grid;
+      place-items: center;
+      height: 100%;
+      width: 100%;
+
+      h1 {
+        padding: 10px 10px;
+        color: $main-backgroud;
+        font: $primaryFont;
+      }
+    }
 
     .card {
       display: flex;
@@ -73,7 +90,6 @@
       border-radius: 10px;
       padding: 5px 15px;
       width: 200px;
-      // height: 100px;
       max-height: 250px;
       gap: 10px;
       background-color: $white;
