--- a/frontend/src/styles/client.scss
+++ b/frontend/src/styles/client.scss
@@ -9,6 +9,15 @@
   min-height: 30vh;
   overflow-y: auto;
 
+  .errClass {
+    display: grid;
+    place-items: center;
+    margin: auto;
+    font: $secondaryFont;
+    background-color: $white;
+    padding: 10px 10px;
+  }
+
   .bookingCard {
     border: 1px solid gray;
     padding: 1rem;
