--- a/frontend/src/styles/client.scss
+++ b/frontend/src/styles/client.scss
@@ -3,11 +3,10 @@
 
 .mainCart {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin: 2rem auto;
   flex-wrap: wrap;
-  min-height: 30vh;
-  overflow-y: auto;
+  min-height: 20vh;
 
   .errClass {
     display: grid;
