--- a/frontend/src/styles/login.scss
+++ b/frontend/src/styles/login.scss
@@ -60,6 +60,7 @@
       flex-direction: column;
       gap: 50px;
       background-color: $white;
+      min-width: 50%;
       h1 {
         font: $primaryFont;
         color: $headerColor;
@@ -156,12 +157,9 @@
       min-height: 100vh;
       justify-content: center;
       align-items: center;
-      .left {
-        gap: 2px;
-      }
 
       .right {
-        gap: 30px;
+        gap: 35px;
         h1 {
           font-size: 20px;
         }
@@ -183,7 +181,7 @@
 }
 @media screen and (max-width: $large) {
   .login {
-    height: 100%;
+    height: 20%;
     .cart {
       display: flex;
       justify-content: center;
@@ -196,6 +194,7 @@
       }
 
       .right {
+        gap: 8px;
         h1 {
           font-size: 20px;
         }
