--- a/frontend/src/styles/login.scss
+++ b/frontend/src/styles/login.scss
@@ -214,20 +214,22 @@
 }
 @media screen and (max-width: $large) {
   .login {
-    height: 20%;
     .cart {
       display: flex;
       justify-content: center;
+      flex-direction: column;
       align-items: center;
       width: 100%;
       padding: 0 20px;
       .left {
         background-size: cover;
-        gap: 2px;
+        gap: 15px;
+        min-width: 50vw;
       }
 
       .right {
         gap: 8px;
+        min-width: 50vw;
         h1 {
           font-size: 20px;
         }
