Forgot PW, reset pw and not found page created

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -24,3 +24,12 @@
     min-height: 100vh;
   }
 }
+
+a {
+  margin-top: 15px;
+  padding: 10px 10px;
+  color: red;
+  font-family: helvetica;
+  text-decoration: none;
+  text-transform: uppercase;
+}
