--- a/frontend/src/styles/register.scss
+++ b/frontend/src/styles/register.scss
@@ -1,10 +1,11 @@
 @import "colors";
 @import "fonts";
 @import "responsiveWidth";
+@import "colors";
 
 div {
-  width: 100vw;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,6 +20,11 @@ div {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      h3 {
+        font: $secondaryFont;
+        text-align: center;
+        color: $btn-text-clr;
+      }
 
       div {
         position: relative;
