Forget PW and reset Pw done

--- a/frontend/src/styles/forgotPassword.scss
+++ b/frontend/src/styles/forgotPassword.scss
@@ -9,6 +9,11 @@ div {
     justify-content: center;
     flex-direction: column;
     gap: 20px;
+    h3 {
+      font: $secondaryFont;
+      text-align: center;
+      color: $btn-text-clr;
+    }
 
     input {
       padding: 1vmax 2vmax;
