--- a/frontend/src/styles/resetPassword.scss
+++ b/frontend/src/styles/resetPassword.scss
@@ -18,6 +18,11 @@ div {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      h3 {
+        font: $secondaryFont;
+        text-align: center;
+        color: $btn-text-clr;
+      }
 
       div {
         position: relative;
