--- a/frontend/src/styles/login.scss
+++ b/frontend/src/styles/login.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   .cart {
     display: flex;
-    width: 50%;
+    width: 60%;
     border-radius: 10px;
     min-height: 500px;
     overflow: hidden;
@@ -58,7 +58,7 @@
       display: flex;
       justify-content: center;
       flex-direction: column;
-      gap: 50px;
+      gap: 30px;
       background-color: $white;
       min-width: 50%;
       h1 {
@@ -120,6 +120,43 @@
           background-color: $btn-text-clr;
           color: $white;
           cursor: pointer;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: $large) {
+  .login {
+    width: 100%;
+    height: 100%;
+    .cart {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      min-width: 105%;
+      padding: 10px 10px;
+
+      .left {
+        width: 50vw;
+      }
+
+      .right {
+        width: 120px;
+        h1 {
+          font-size: 20px;
+        }
+
+        form {
+          input {
+            padding: 20px;
+            font-size: 20px;
+          }
+          .passHolder {
+            span {
+              font-size: 20px;
+            }
+          }
         }
       }
     }
@@ -206,43 +243,6 @@
           }
           button {
             margin-top: 5px;
-          }
-        }
-      }
-    }
-  }
-}
-@media screen and (max-width: $large) {
-  .login {
-    .cart {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      padding: 0 20px;
-      .left {
-        background-size: cover;
-        gap: 15px;
-        min-width: 50vw;
-      }
-
-      .right {
-        gap: 8px;
-        min-width: 50vw;
-        h1 {
-          font-size: 20px;
-        }
-
-        form {
-          input {
-            padding: 20px;
-            font-size: 20px;
-          }
-          .passHolder {
-            span {
-              font-size: 20px;
-            }
           }
         }
       }
